spade-tests/src/snapshots/spade_tests__ast_lowering__impl_method_generic_args_length_of_0_does_not_match_trait_method_generic_args_length.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait X {
    fn foo<U1, U2>(self) -> bool;
}
struct A {}
impl X for A {
    fn foo(self) -> bool {
        false
    }
}


error: Missing type parameters on impl of generic method
  ┌─ testinput:6:8
  │
2 │     fn foo<U1, U2>(self) -> bool;
  │            ------ Because this has 2 type parameters
  ·
6 │     fn foo(self) -> bool {
  │        ^^^ Expected 2 type parameters
